@@ -475,6 +475,7 @@ Vladimir Kushnir
 Kirill Kuzminykh (Кирилл Кузьминых)
 Ross Lagerwall
 Cameron Laird
+Torsten Landschoff
 Łukasz Langa
 Tino Lange
 Andrew Langmead
